Fixed horizontal scroll issue by adding overflow: hidden command

--- a/style.css
+++ b/style.css
@@ -459,6 +459,7 @@
     flex-direction: column;
     align-items: center;
     flex-wrap: wrap;
+    overflow-x: hidden;
   }
 
   .navicon,
